--- a/app/src/main/res/layout/activity_charity_manage_admin.xml
+++ b/app/src/main/res/layout/activity_charity_manage_admin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CharityManageAdmin"
-    android:background="@color/dark_blue">
+    android:background="@color/bg">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView6"
@@ -14,7 +14,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="80dp"
         android:layout_marginRight="30dp"
-        android:backgroundTint="@color/light_blue"
+        android:backgroundTint="@color/dark_blue"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
