--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#4A90E2</color>
     <color name="dark_blue">#0A1551</color>
+    <color name="bg_blue">#CCDEF3</color>
 </resources>
