--- a/app/src/main/res/layout/activity_charity_manage_admin.xml
+++ b/app/src/main/res/layout/activity_charity_manage_admin.xml
@@ -53,7 +53,7 @@
         tools:layout_editor_absoluteX="0dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvProducts"
+            android:id="@+id/rvCharities"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
