--- a/app/src/main/res/layout/item_charity.xml
+++ b/app/src/main/res/layout/item_charity.xml
@@ -21,8 +21,9 @@
             android:orientation="horizontal">
 
 
+
             <TextView
-                android:id="@+id/tvProductName"
+                android:id="@+id/tvCharityName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/TvCharity_name"
@@ -40,9 +41,16 @@
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/iv_admin_char_img"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintStart_toEndOf="@+id/textView13"
+                app:layout_constraintTop_toBottomOf="@+id/etfoodcharityDescription"
+                app:srcCompat="@drawable/baseline_image_24" />
 
             <TextView
-                android:id="@+id/tvSection"
+                android:id="@+id/tvDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/TvCharity_description"
