--- a/app/src/main/res/layout/item_charity.xml
+++ b/app/src/main/res/layout/item_charity.xml
@@ -42,7 +42,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/iv_admin_char_img"
+                android:id="@+id/ivImage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 app:layout_constraintStart_toEndOf="@+id/textView13"
