--- a/app/src/main/res/layout/activity_charity_manage_admin.xml
+++ b/app/src/main/res/layout/activity_charity_manage_admin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CharityManageAdmin"
-    android:background="@color/bg">
+    android:background="@color/bg_blue">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView6"
