--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -22,6 +22,7 @@
         android:id="@+id/btn_admin_home_posts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="PostManagement"
         android:text="Posts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
