--- a/app/src/main/res/layout/item_donations.xml
+++ b/app/src/main/res/layout/item_donations.xml
@@ -23,15 +23,34 @@
 
 
             <TextView
-                android:id="@+id/tvCharityName"
+                android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/TvCharity_name"
+                android:text="@string/Tvuser_name"
                 android:textColor="@color/dark_blue"
                 android:layout_marginStart="8dp"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                >
+
+                <TextView
+                    android:id="@+id/tvAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/TvAmount"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         </LinearLayout>
 
@@ -41,24 +60,10 @@
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/ivImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/baseline_image_24" />
 
 
-            <TextView
-                android:id="@+id/tvDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/TvCharity_description"
-                android:textColor="@color/black"
-                android:layout_marginStart="8dp"
-                android:textSize="15dp"
-                />
+
+
 
         </LinearLayout>
 
