--- a/app/src/main/res/layout/fragment_add_payment_method.xml
+++ b/app/src/main/res/layout/fragment_add_payment_method.xml
@@ -155,7 +155,7 @@
 
 
                 <Button
-                    android:id="@+id/addcard"
+                    android:id="@+id/BtnAddcard"
                     android:layout_width="@dimen/btnWidth"
                     android:layout_height="@dimen/btnHeight"
                     android:layout_marginTop="30dp"
