--- a/app/src/main/res/layout/fragment_saved_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_saved_payment_methods.xml
@@ -107,7 +107,7 @@
 
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvCharities"
+                android:id="@+id/rvPaymentMethods"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
@@ -129,11 +129,11 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/faBtnAddpost"
+            android:id="@+id/BtnAddPaymentMethod"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="50dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="70dp"
             android:backgroundTint="@color/light_blue"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
