--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="btnWidth">150dp</dimen>
     <dimen name="btnHeight">50dp</dimen>
     <dimen name="btnWidthLong">250dp</dimen>
+    <dimen name="btnSend">30dp</dimen>
 </resources>
